# voice-agent-router

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  roadmap.md
.github/workflows/: ci.yml
custom_components/voice_agent_router/: __init__.py  action_cache.py  config_flow.py  const.py  conversation.py  entity_aliases.py  entity_cache.py  followup.py  manifest.json  perf_log.py  strings.json
custom_components/voice_agent_router/llm_api/: __init__.py  mcp_api.py  skills_api.py
custom_components/voice_agent_router/mcp/: __init__.py  client.py
custom_components/voice_agent_router/router/: __init__.py  intent_router.py  patterns.py
custom_components/voice_agent_router/skills/: __init__.py  cache.py  executor.py  loader.py
custom_components/voice_agent_router/translations/: en.json
skills/: good_morning.yaml  house_status.yaml  weather_report.yaml
tests/: conftest.py  ha_stubs.py  test_action_cache.py  test_conversation.py  test_entity_ambiguity.py  test_entity_cache.py  test_entity_prefetch.py  test_followup.py  test_mcp_client.py  test_router.py  test_skill_cache.py  test_skill_matching.py  test_skills.py
